# pyclearsky

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  a.csv  a.xls  afile.txt  b.csv  clearskyrad.py  csvstuff.py  drows.csv  notes.txt  pyproject.toml  requirements_dev.txt  runningnotes.rst  setup.cfg  setup.py  temp.py  test.xls  test_clearskyrad.py  test_weather_stat.py  tox.ini  weather_stats.py  weather_test.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  pyclearsky.rst  requirements.txt  usage.rst
original_code/: README.md  a.txt  ab.xls  ad1.xls  brows.csv  clearskyrad.py  csvstuff.py  itest_clearskyrad.py  notes.txt  temp.txt  weather_itest.py
original_code/.cache/v/cache/: lastfailed
original_code/weatherfiles/USA_AZ_Phoenix/: USA_AZ_Phoenix.722780_TMY2.ddy  USA_AZ_Phoenix.722780_TMY2.stat  USA_AZ_Phoenix.722780_TMY2.xls
pyclearsky/: __init__.py  clearskyrad.py  cli.py  pytest_helpers.py
tests/: test_clearskyrad.py  test_pyclearsky.py
weatherfiles/USA_AZ_Phoenix/: USA_AZ_Phoenix.722780_TMY2  USA_AZ_Phoenix.722780_TMY2.epw  USA_AZ_Phoenix.722780_TMY2.xls
