- name: Install uv
  uses: astral-sh/setup-uv@v3

  - name: Install deps + sync venv
    run: uv sync --frozen --all-extras --dev

    - name: Test
      run: uv run --frozen pytest[project]
name = "pyclearsky"
version = "0.3.2"
description = "implements the equations from Ashrae Fundamentals 2009 for clear sky in Python"
readme = "README.rst"
requires-python = ">=3.9,<4.0"
dependencies = [
#     "six==1.16.0",
]

[dependency-groups]
dev = [
    "bumpversion==0.6.0",
    "coverage==7.2.7",
    "flake8==6.0.0",
    "ipython>=8.18.1",
    "pip==23.1.2",
    "pip-tools==6.13.0",
    "pytest==7.4.0",
    "pytest-runner==6.0.0",
    "readthedocs-sphinx-search==0.3.1",
    "sphinx==6.2.1",
    "sphinx-rtd-theme==1.2.2",
    "tox==4.6.3",
    "twine==4.0.2",
    "watchdog==3.0.0",
    "wheel==0.40.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
