[project]
name = "pyclearsky"
version = "0.3.3"
description = "implements the equations from Ashrae Fundamentals 2009 for clear sky in Python"
readme = "README.rst"
requires-python = ">=3.9,<4.0"
authors = [
  { name = "Santosh Philip", email = "santosh_philip@nomail.com" }
]
license = { text = "MIT" }
keywords = ["pyclearsky", "ashrae", "clear-sky", "solar"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Natural Language :: English",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/santoshphilip/pyclearsky"
Repository = "https://github.com/santoshphilip/pyclearsky"
Issues = "https://github.com/santoshphilip/pyclearsky/issues"

[dependency-groups]
dev = [
    "coverage==7.2.7",
    "flake8==6.0.0",
    "pip==25.3",
    "pip-tools==6.13.0",
    "pytest==7.4.0",
    "pytest-runner==6.0.0",
    "readthedocs-sphinx-search==0.3.2",
    "sphinx==6.2.1",
    "sphinx-rtd-theme==1.2.2",
    "tox==4.6.3",
    "twine==4.0.2",
    "watchdog==3.0.0",
    "wheel==0.40.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
